BUG: various styling/validation issues; see list of pivotal items
QA:
* http://www.pivotaltracker.com/story/show/909923
* http://www.pivotaltracker.com/story/show/898741
* http://www.pivotaltracker.com/story/show/910331
! note that I compromised on this last one and on IE7 settled for making them at least not overlap; trying to bring it up onto the same line is more effort than it's worth.

--- a/public/stylesheets/blist-grid-screen.css
+++ b/public/stylesheets/blist-grid-screen.css
@@ -198,7 +198,7 @@ body#lensBody
 
 #lensContainer .headerBar > ul > li.noSpacing
 {
-    padding: 0;
+    padding: 0 0.5em 0 0;
 }
 
 #lensContainer .headerBar > ul > li > a
